--- a/_posts/db/2022-05-12-mysql.md
+++ b/_posts/db/2022-05-12-mysql.md
@@ -108,13 +108,46 @@ date: 2022-05-12
     // 查看库下表的数量
     SELECT TABLE_NAME,TABLE_ROWS FROM information_schema.`TABLES` WHERE TABLE_SCHEMA = (SELECT database()) ORDER BY TABLE_ROWS DESC;
 
+    SELECT COUNT(*) AS table_count FROM information_schema.tables WHERE table_schema = 'HBZWTEST';
+
+
+### 自增主键
+
+    SELECT LAST_INSERT_ID() AS id;
+
+    CREATE TABLE tb_student2 (
+    -> id INT NOT NULL PRIMARY KEY AUTO_INCREMENT,
+    -> name VARCHAR(20) NOT NULL,
+    -> PRIMARY KEY(ID)
+    -> )AUTO_INCREMENT=100;
+    
+    ALTER TABLE TB_GVRP_HEAD MODIFY SID BIGINT PRIMARY KEY FIRST;
+
+> `FIRST` 不是规范sql, 指定当前字段为第一列, (数据库实现有可能不是第一列)
+
+    ALTER TABLE TB_BS_CUSTOMER MODIFY SID BIGINT NOT NULL AUTO_INCREMENT;
+
+    修改AUTO_INCREMENT值
+    ALTER TABLE tableName AUTO_INCREMENT = n
+
+#### 数据处理
+
+##### 清空表数据
+
+    truncate table 表名
+    DELETE FROM TB_HBCOM_BUSINESS_INFO WHERE 1=1;
+
 
 ### problem
 
 #### 1. ONLY_FULL_GROUP_BY
     5.7 默认 ONLY_FULL_GROUP_BY
     SELECT list is not in GROUP BY clause and contains nonaggregated column ‘×××’
+
+    show variables like '%sql_mode';
+
     SET GLOBAL sql_mode=(SELECT REPLACE(@@sql_mode,'ONLY_FULL_GROUP_BY',''));
+    SET SESSION sql_mode=(SELECT REPLACE(@@sql_mode,'ONLY_FULL_GROUP_BY',''));
 
 #### 2. You do not have the SUPER privilege and binary logging is enabled
 
