--- a/_posts/db/2023-03-17-oracle.md
+++ b/_posts/db/2023-03-17-oracle.md
@@ -325,7 +325,14 @@ select instance_name from v$instance;
     ALTER SYSTEM KILL SESSION '15368,19257';
 
 
+### 删除表
 
+    BEGIN
+      FOR c IN ( SELECT table_name FROM user_tables WHERE table_name LIKE 'EXT_%' )
+      LOOP
+        EXECUTE IMMEDIATE 'DROP TABLE ' || c.table_name;
+      END LOOP;
+    END;
 
 
 ## Reference
