--- a/_posts/linux/2022-01-19-linux-vnc.md
+++ b/_posts/linux/2022-01-19-linux-vnc.md
@@ -8,6 +8,10 @@ date: 2022-01-25
 
 ## Linux VNC
 
+
+vncserver :1 -auth /home/lmf/.Xauthority -geometry 1280x720 -depth 24 -rfbwait 30000 -rfbauth /home/lmf/.vnc/passwd -rfbport 5901 -pn -SecurityTypes VncAuth -localhost no
+
+
 > kali linux 上tightvncserver 安装包版本有问题, 会导致连接失败. 而且 tightvncserver 是
 > 使用虚拟窗口. 安装使用x11vnc
 
@@ -17,19 +21,23 @@ date: 2022-01-25
 	4. sudo chmod -r 755 /etc/x11vnc
 	5. sudo x11vnc -storepasswd /etc/x11vnc/vncpasswd
 	6. sudo vim /lib/systemd/system/x11vnc.service
+       sudo vim /etc/systemd/system/vncserver@.service
 		
-		[Unit]
-		Description=Start x11vnc at startup.
-		After=multi-user.target display-manager.service
+        [Unit]
+        Description=Remote desktop service (VNC)
+        After=syslog.target network.target
 
-		[Service]
-		Type=simple
-		ExecStart=/usr/bin/x11vnc -auth guess -forever -noxdamage -repeat -rfbauth /etc/x11vnc/vncpasswd -rfbport 5900 -shared
-		Restart=always
-		RestartSec=5
+        [Service]
+        Type=simple
+        User=linuxize
+        PAMName=login
+        PIDFile=/home/%u/.vnc/%H%i.pid
+        ExecStartPre=/bin/sh -c '/usr/bin/vncserver -kill :%i > /dev/null 2>&1 || :'
+        ExecStart=/usr/bin/vncserver :%i -geometry 1440x900 -alwaysshared -fg
+        ExecStop=/usr/bin/vncserver -kill :%i
 
-		[Install]
-		WantedBy=multi-user.target
+        [Install]
+        WantedBy=multi-user.target
 
 	7. sudo systemctl daemon-reload
 	8. sudo service lightdm restart
@@ -66,8 +74,14 @@ date: 2022-01-25
 	EndSection
 
 
+### /usr/lib/xorg/Xorg.wrap: Only console users are allowed to run the X server
+
+    sudo vim /etc/X11/Xwrapper.config
+    allowed_users = anybody
+
 ### Reference
 [kali linux树莓派配置的各种坑① 有线配置+串口控制台](https://blog.csdn.net/qq_43242727/article/details/105341512)  
 [kali2020 vnc安装_kali配置x11vnc](https://blog.csdn.net/weixin_42549723/article/details/113394065)  
 [x11vnc is displaying a black (blank) screen, even though the computer is working fine (through SSH)](https://www.reddit.com/r/linuxmint/comments/fo9yzo/x11vnc_is_displaying_a_black_blank_screen_even/)  
 [Add Fake Display when No Monitor is Plugged In](https://askubuntu.com/questions/453109/add-fake-display-when-no-monitor-is-plugged-in)  
++ [How to Install and Configure VNC on Ubuntu 18.04](https://linuxize.com/post/how-to-install-and-configure-vnc-on-ubuntu-18-04/)
