--- a/_posts/multimedia/2022-07-13-mm-video.md
+++ b/_posts/multimedia/2022-07-13-mm-video.md
@@ -7,6 +7,29 @@ date: 2022-07-13
 ---
 ## 视频
 
+分辨率
+采样频率
+采集格式
+传输通道
+
+采集源
+摄像头
+屏幕录制
+文件推流
+
+android:
+setPreviewCallback
+MediaRecorder
+
+iOS:
+AVFoundation
+
+pc:
+mjpeg-streamer
+
+滤镜: GPUImage
+音频: SoundTouch
+
 ### 图像
 > 视频是由一组图像组成的
 图像是由像素组成
@@ -68,6 +91,9 @@ YUV4:2:0 = RGB / 2
 一秒钟数据大小 = 640 * 480 * 1.5(YUV420) * 15 * 8(前面是byte, \*8转bit) = 55mbps
 h264建议码流 = 500kpbs
 压缩比: 500 / 55000 = 1/ 100
+
+
+Mbps是megabits per second的缩写，是一种传输速率单位，指每秒传输的位（比特）数量。1Mbps代表每秒传输1，000，000位（bit），即每秒传输的数据量为：1，000，000/8=125，000Byte/s
 
 ##### GOP
 
@@ -225,3 +251,5 @@ RGB码流= 分辨率(宽x高) * 3(byte 三原色) * 帧率
 [fourcc](https://www.fourcc.org/)  
 [Advanced Video Coding](https://en.wikipedia.org/wiki/Advanced_Video_Coding)  
 [MPEG](https://mpeg.chiariglione.org/)  
++ [android音视频开发](https://blog.csdn.net/qqchenjian318/category_7031190.html)
++ [音视频研发与AI视觉](https://www.zhihu.com/column/c_1253621461443026944)
