--- a/_posts/web/2022-07-07-web-css.md
+++ b/_posts/web/2022-07-07-web-css.md
@@ -8,8 +8,18 @@ date: 2022-07-07
 
 ## CSS
 
+### 流行的框架
+
+Bootstrap: Bootstrap是一个流行的开源前端框架，它用于构建响应式和移动设备优先的Web项目。它由Twitter的开发者团队创建并维护，旨在帮助开发人员快速构建具有一致性和现代外观的Web界面。
+Foundation：Foundation是一个灵活且功能强大的前端框架，提供了类似Bootstrap的栅格系统和响应式布局。它还具有大量的组件和工具，可用于构建现代化的Web界面。
+Bulma：Bulma是一个轻量级的CSS框架，提供了简洁而灵活的布局和组件。它使用简单的CSS类来创建响应式布局和常见的UI元素。
+Material-UI：Material-UI是一个基于Google的Material Design风格的React组件库。它提供了丰富的预定义组件，可用于构建现代、美观的用户界面。
+Tailwind CSS：Tailwind CSS是一个高度可定制的CSS框架，提供了一组小型的CSS类，用于快速构建界面。它允许开发人员通过组合这些类来创建自定义的样式和布局。
+Semantic UI：Semantic UI是一个语义化的UI框架，使用自然语言命名的CSS类来描述组件和布局。它强调可读性和易用性，使得开发人员能够更快速地构建漂亮的界面。
+
 ## Reference
 [Learn CSS](https://web.dev/learn/css/?gclid=Cj0KCQjw5ZSWBhCVARIsALERCvydBBM26Ivpr5GMPB0wLgeSt6YhZrZd1lFs-SvgbhUVJadhysnA-jUaAs3LEALw_wcB)  
 [css layout](https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout)  
 [bootstrap](https://getbootstrap.com/)
 [React Bootstrap](https://react-bootstrap.github.io/)  
+
