--- a/_posts/multimedia/2022-06-29-mm-audio.md
+++ b/_posts/multimedia/2022-06-29-mm-audio.md
@@ -203,6 +203,16 @@ AAC格式, AAC头格式:
     avcodec_send_frame
     avcodec_receive_packet
 
+### 音频帧
+
+> 2.5ms - 60ms  定义为一帧, 时间为采样时间
+
+采样率: 8kHz
+通道:   2
+位宽:   16bit
+帧:     20ms 
+
+8000 * 2 * 16 * 0.02 = 5120bit / 8 = 640byte
 
 ## Reference
 [AAC Frame Header (ADTS)](https://www.p23.nl/projects/aac-header/)  
