--- a/_posts/programming-language/2020-07-27-java-exec.md
+++ b/_posts/programming-language/2020-07-27-java-exec.md
@@ -10,6 +10,7 @@ date: 2020-07-27
 
 ### macOS JAVA env
 
+    /Library/Internet Plug-Ins/JavaAppletPlugin.plugin 
     /Library/Java/JavaVirtualMachines
 
     sudo cp -r /usr/local/opt/openjdk@8/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk-8.jdk
