--- a/_posts/tools/2022-05-18-tools-git.md
+++ b/_posts/tools/2022-05-18-tools-git.md
@@ -482,5 +482,24 @@ hint: commands sometime before your next pull:
     husky
     commitlit
 
+### 回退push
+
+> 丢弃修改
+
+    git reset --hard HEAD^
+    git push origin master -f
+
+> 创建一个commit 撤回上一个commit
+
+    git revert HEAD
+    git push origin master
+
+> 切换branch及commit
+
+    git checkout <brach>
+    git checkout <commit>
+
+    git switch -c <brachname> 
+
 ### Reference
 [git](https://git-scm.com/book/zh/v2/%E8%B5%B7%E6%AD%A5-%E5%85%B3%E4%BA%8E%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6)  
