custome keyboard layout in macos

--- a/_posts/hacker/2023-03-07-tools.md
+++ b/_posts/hacker/2023-03-07-tools.md
@@ -8,11 +8,22 @@ date: 2023-03-07
 
 ## kali 工具
 
+kali-linux-all
+kali-linux-everything
+
 ### DNS
 
 1. whois
 2. host
 3. dig
 4. dnsenum
+
+### C2
+
+Cobalt Strke
+
+### Social Engineering
+
+USB Rubber Ducky
 
 ## Reference
