--- a/_posts/ios/2022-04-07-ios-env.md
+++ b/_posts/ios/2022-04-07-ios-env.md
@@ -14,5 +14,16 @@ date: 2022-04-07
 2. 个人证书 ~/Library/MobileDevice/Provisioning\ Profiles
     8c963f15-51d3-4b3a-bee1-c5c00ff4e5ba.mobileprovision
 
+### 2. 必要模拟器
+
+版本 16.4
+
+5.5: iPhone 8 Plus
+6.5: iPhone 14 Plus
+iPad Pro (12.9-inch) (2nd generation)
+iPad Pro (12.9-inch) (6nd generation)
+
++ [Screenshot specifications](https://developer.apple.com/help/app-store-connect/reference/screenshot-specifications/)
+
 ### Reference
 
