--- a/_posts/ios/2023-08-22-ios-error.md
+++ b/_posts/ios/2023-08-22-ios-error.md
@@ -86,6 +86,20 @@ Here is the original source of this information - Link
 + [Xcode 12: build Error on FIRAnalyticsConnector](https://stackoverflow.com/questions/64171400/xcode-12-build-error-on-firanalyticsconnector/64183786#64183786)
 + [pod arm64](https://stackoverflow.com/a/76212763)
 
+### Building for 'iOS-simulator', but linking in object file 
+Error (Xcode): Building for 'iOS-simulator', but linking in object file (/Users/lmf/.pub-cache/hosted/pub.flutter-io.cn/tencent_kit-6.0.1/ios/Libraries/TencentOpenAPI.framework/TencentOpenAPI[arm64][2](libTencentOpenApi_IOS.a-arm64-master.o)) built for 'iOS'
+
+Error (Xcode): Linker command failed with exit code 1 (use -v to see invocation)
+
++ [Xcode building for iOS Simulator, but linking in an object file built for iOS, for architecture 'arm64'](https://stackoverflow.com/questions/63607158/xcode-building-for-ios-simulator-but-linking-in-an-object-file-built-for-ios-f)
+
+* Excluded Architectures Debug +arm64 *
+
+### 手动下载iOS模拟器
+
+1、去官网下载自己需要[地址](https://developer.apple.com/download/all)
+2、下载完成后，执行以下命令添加：xcrun simctl runtime add /路径/iOS_17_Simulator_Runtime.dmg（这个是自己下载的文件的地址）
+3、等待添加完毕
 
 
 ## Reference
