--- a/_posts/programming-language/2022-05-17-js.md
+++ b/_posts/programming-language/2022-05-17-js.md
@@ -8,6 +8,416 @@ date: 2022-05-17
 
 ## Javascript
 
+* Client-side JavaScript - Web browsers
+* Server-side JavaScript - Node.js
+* JavaScript and Java are similar in some ways but fundamentally different in some others
+* JavaScript has a `prototype-based` object model instead of the more common class-based object model.
+
+### Basics
+
+#### Comments
+// a one line comment
+
+/* this is a longer,
+ * multi-line comment
+ */
+
+#### Declarations
+
+* var   - Declares a variable, optionally initializing it to a value. 
+     var-declared variables are not block-scoped, but are scoped to the containing function or script
+* let   - Declares a block-scoped, local variable, optionally initializing it to a value.
+* const - Declares a block-scoped, read-only named constant. const only prevents re-assignments
+
+#### Variable scope
+
+* Global scope: The default scope for all code running in script mode.
+    - web pages, globalThis window
+
+* Module scope: The scope for code running in module mode.
+* Function scope: The scope created with a function.
+* Block scope: The scope created with a pair of curly braces (a block).
+
+#### Variable hoisting
+
+> only its declaration is hoisted, but not its initialization
+
+#### Data types
+
+* Seven data types that are primitives:
+    1. Boolean. true and false.
+    2. null. A special keyword denoting a null value. (Because JavaScript is case-sensitive, null is not the same as Null, NULL, or any other variant.)
+    3. undefined. A top-level property whose value is not defined.
+    4. Number. An integer or floating point number. For example: 42 or 3.14159.
+    5. BigInt. An integer with arbitrary precision. For example: 9007199254740992n.
+    6. String. A sequence of characters that represent a text value. For example: "Howdy".
+    7. Symbol. A data type whose instances are unique and immutable.
+* and Object
+
+> Data type conversion
+
+##### Falsy values
+
+    false
+    undefined
+    null
+    0
+    NaN
+    the empty string ("")
+
+
+#### Literals
+
+* Array literals
+* Boolean literals
+* Numeric literals
+* Object literals
+* RegExp literals
+* String literals
+
+### Control flow and error handling
+
+* Block statement
+* if...else statement
+* switch statement
+* throw statement
+* try...catch statement
+
+### Loops and iteration
+
+* for statement
+* do...while statement
+* while statement
+* labeled statement
+* break statement
+* continue statement
+* for...in statement
+* for...of statement
+
+### Functions
+
+* Function expressions
+* Function hoisting
+* Nested functions and closures
+* Name conflicts
+* Using the arguments object
+* Arrow functions
+
+#### Recursion
+
+    The function's name
+    arguments.callee
+    An in-scope variable that refers to the function
+
+#### Function parameters
+
+* Default parameters
+* Rest parameters
+
+### Expressions and operators
+
+* Assignment operators
+    - Destructuring
+    - Evaluation and nesting
+* Comparison operators
+* Arithmetic operators
+* Bitwise operators
+* Logical operators
+* BigInt operators
+* String operators
+* Conditional (ternary) operator
+* Comma operator
+* Unary operators
+    - delete
+    - typeof
+* Relational operators
+    - in
+    - instanceof
+
+#### Basic expressions
+
+* this - Use the this keyword to refer to the current object. Usually in function
+* Grouping operator
+* new
+* super
+
+### Numbers and dates
+
+#### Numbers
+
+> In JavaScript, numbers are implemented in double-precision 64-bit binary format IEEE 754
+
+* +Infinity
+* -Infinity
+* NaN
+
+* Decimal numbers. Decimal literals can start with a zero (0). 8 or 10
+* Binary numbers
+* Octal numbers. 0o
+* Hexadecimal numbers
+* Number object
+* Math object
+* BigInts
+* Date object
+
+### Text formatting
+
+* Strings UTF-16
+* template literals  `Fifteen is ${five + ten} and not ${2 * five + ten}.`
+* Multi-line template literals
+* Embedded expressions  
+* Internationalization, Intl
+
+### Regular expressions
+
+* const re = /ab+c/;
+* const re = new RegExp("ab+c");
+
+### Collections
+
+* Array or TypedArray
+* Map, WeakMap, Set, WeakSet
+
+#### Key and value equality of Map and Set
+
+> Both the key equality of Map objects and the value equality of Set objects are based on the SameValueZero algorithm:
+
+    Equality works like the identity comparison operator ===.
+    -0 and +0 are considered equal.
+    NaN is considered equal to itself (contrary to ===).
+
+### Working with objects
+
+#### Using object initializers
+
+> Objects created with initializers are called plain objects, because they are instances of Object, but not any other object type. Some object types have special initializer syntaxes — for example, array initializers and regex literals
+
+    const obj = {
+      property1: value1, // property name may be an identifier
+      2: value2, // or a number
+      "property n": value3, // or a string
+    };
+
+#### Using a constructor function
+
+    # 开头字母惯例大写
+    function Car(make, model, year) {
+      this.make = make;
+      this.model = model;
+      this.year = year;
+    }
+
+    const myCar = new Car("Eagle", "Talon TSi", 1993);
+
+#### Using the Object.create() method
+
+    // Animal properties and method encapsulation
+    const Animal = {
+      type: "Invertebrates", // Default value of properties
+      displayType() {
+        // Method which will display type of Animal
+        console.log(this.type);
+      },
+    };
+
+    // Create new animal type called animal1
+    const animal1 = Object.create(Animal);
+    animal1.displayType(); // Logs: Invertebrates
+
+    // Create new animal type called fish
+    const fish = Object.create(Animal);
+    fish.type = "Fishes";
+    fish.displayType(); // Logs: Fishes
+
+#### Enumerating properties
+
+* for...in loops. This method traverses all of the enumerable string properties of an object as well as its prototype chain.
+* Object.keys(). This method returns an array with only the enumerable own string property names ("keys") in the object myObj, but not those in the prototype chain.
+* Object.getOwnPropertyNames(). This method returns an array containing all the own string property names in the object myObj, regardless of if they are enumerable or not.
+
+#### Defining properties for all objects of one type
+
+    Car.prototype.color = "red";
+    console.log(car1.color); // "red"
+
+#### Defining methods
+
+    objectName.methodName = functionName;
+
+    const myObj = {
+      myMethod: function (params) {
+        // do something
+      },
+
+      // this works too!
+      myOtherMethod(params) {
+        // do something else
+      },
+    };
+
+#### Using this for object references
+
+> this is a "hidden parameter" of a function call that's passed in by specifying
+> the object before the function that was called. For example, in Manager.sayHi()
+> , this is the Manager object, because Manager comes before the function sayHi().
+> If you access the same function from another object, this will change as well.
+> If you use other methods to call the function, like Function.prototype.call()
+> or Reflect.apply(), you can explicitly pass the value of this as an argument.
+
+#### Defining getters and setters
+
+    const myObj = {
+      a: 7,
+      get b() {
+        return this.a + 1;
+      },
+      set c(x) {
+        this.a = x / 2;
+      },
+    };
+
+    console.log(myObj.a); // 7
+    console.log(myObj.b); // 8, returned from the get b() method
+    myObj.c = 50; // Calls the set c(x) method
+    console.log(myObj.a); // 25
+
+#### Comparing objects
+
+> In JavaScript, objects are a reference type. Two distinct objects are never equal
+> , even if they have the same properties. Only comparing the same object reference with itself yields true.
+
+### Class
+
+#### Declaring a class
+
+    class MyClass {
+      // Constructor
+      constructor() {
+        // Constructor body
+      }
+      // Instance field
+      myField = "foo";
+      // Instance method
+      myMethod() {
+        // myMethod body
+      }
+      // Static field
+      static myStaticField = "bar";
+      // Static method
+      static myStaticMethod() {
+        // myStaticMethod body
+      }
+      // Static block
+      static {
+        // Static initialization code
+      }
+      // Fields, methods, static fields, and static methods all have
+      // "private" forms
+      #myPrivateField = "bar";
+    }
+
+    # Private fields and methods are new features in classes with no trivial equivalent in function constructors.
+    function MyClass() {
+      this.myField = "foo";
+      // Constructor body
+    }
+    MyClass.myStaticField = "bar";
+    MyClass.myStaticMethod = function () {
+      // myStaticMethod body
+    };
+    MyClass.prototype.myMethod = function () {
+      // myMethod body
+    };
+
+    (function () {
+      // Static initialization code
+    })();
+
+#### Constructing a class
+
+    const myInstance = new MyClass();
+
+#### Class declaration hoisting
+
+#### Class expressions
+
+    const MyClass = class {
+      // Class body...
+    };
+
+#### Private fields
+
+    class Color {
+      // Declare: every Color instance has a private field called #values.
+      #values;
+      constructor(r, g, b) {
+        this.#values = [r, g, b];
+      }
+      getRed() {
+        return this.#values[0];
+      }
+      setRed(value) {
+        this.#values[0] = value;
+      }
+    }
+
+    const red = new Color(255, 0, 0);
+    console.log(red.getRed()); // 255
+
+#### Static properties
+
+    # Static methods 
+    static isValid(r, g, b) {
+       return r >= 0 && r <= 255 && g >= 0 && g <= 255 && b >= 0 && b <= 255;
+    }
+
+#### Extends and inheritance
+
+    class Color {
+      #values;
+      constructor(r, g, b, a = 1) {
+        this.#values = [r, g, b, a];
+      }
+      get alpha() {
+        return this.#values[3];
+      }
+      set alpha(value) {
+        if (value < 0 || value > 1) {
+          throw new RangeError("Alpha value must be between 0 and 1");
+        }
+        this.#values[3] = value;
+      }
+    }
+
+    class ColorWithAlpha extends Color {
+      #alpha;
+      constructor(r, g, b, a) {
+        super(r, g, b);
+        this.#alpha = a;
+      }
+      get alpha() {
+        return this.#alpha;
+      }
+      set alpha(value) {
+        if (value < 0 || value > 1) {
+          throw new RangeError("Alpha value must be between 0 and 1");
+        }
+        this.#alpha = value;
+      }
+    }
+
+### Iterators and generators
+
++ [Iterator protocol](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols#the_iterator_protocol)
+
+#### Generator functions
+
+    function* 
+
+### Meta programming
+
++ [Meta programming](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Meta_programming)
 
 ### Reference
-[JavaScript](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide)  
++ [JavaScript](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide)  
++ [the ECMAScript specification](https://tc39.es/ecma262/)
