--- a/_posts/ai/2022-01-19-ai-basic.md
+++ b/_posts/ai/2022-01-19-ai-basic.md
@@ -8,6 +8,25 @@ date: 2022-01-19
 
 ## Artificial Intelligence Basic
 
++ [langchain-ai/langchain 上下文感知推理 向量化](https://github.com/langchain-ai/langchain)
+
++ [pytorch/pytorch](https://github.com/pytorch/pytorch)
+
++ [comfyanonymous/ComfyUI](https://github.com/comfyanonymous/ComfyUI)
++ [CompVis/stable-diffusion](https://github.com/CompVis/stable-diffusion)
++ [SDXL Stable Diffusion XL]
++ [SDXL LoRA LCM 清华大学]
++ [Draw Things]
+
+macOS-QQ-WeChat-API
+WeChatPlugin-MacOS
+
+Alfred
+
+### OpenAI
+
+    GPTs
+    Assistant API
 
 ### Reference
 [Making Sense out of Machine Learning and Deep Learning](https://www.amd.com/en/technologies/deep-machine-learning)  
