--- a/_posts/linux/2023-03-08-docker.md
+++ b/_posts/linux/2023-03-08-docker.md
@@ -46,8 +46,10 @@ date: 2023-03-08
 
 ### 接入
 
-    docker run -t -i <image-name-or-container-id> /bin/bash
+    <!-- docker run -t -i <image-name-or-container-id> /bin/bash -->
     docker exec -i -t <container-id> /bin/bash
+
+    docker exec -it defects /bin/sh
 
 ### 挂载目录
     // 单目录挂载
@@ -66,6 +68,19 @@ date: 2023-03-08
 
     docker load -i [INPUT_FILE].tar
     docker load -i my_image.tar
+
+###
+
+    docker inspect 53e1180ecb97
+
+
+#### 问题
+
+##### 1. OpenBLAS blas_thread_init: pthread_create failed for thread 1 of 16: Operation not permitted
+
+    docker run --security-opt seccomp:unconfined -d -p 9977:9977 --name stt 018bca116663
+
+    
 
 docker-compose-basic
     version: "3"
